--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ pydantic>=1.8.0,<2.0.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
-syft @ git+https://github.com/OpenMined/PySyft@oblv#egg=syft&subdirectory=packages/syft
+syft @ git+https://github.com/OpenMined/PySyft@0.8#egg=syft&subdirectory=packages/syft
 uvicorn>=0.15.0,<0.16.0
 validators==0.19.0
