Added FastAPI requests tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     lint
+    enclave.test.fastapi
 requires =
     tox-run-command
     pip >= 22.0.4
@@ -27,3 +28,26 @@ commands =
     black .
     isort .
     pre-commit run --all-files
+
+[testenv:enclave.test.fastapi]
+description = Tests for fastAPI
+allowlist_externals =
+    bash
+    sleep
+commands =
+    bash -c "chmod +x ./scripts/kill_process_in_port.sh && \
+    ./scripts/kill_process_in_port.sh"
+
+    pip install -r requirements.txt
+
+    bash -c "cd ./src/ && \
+    uvicorn app:app --host localhost --port 7777 --reload &"
+
+    sleep 5
+
+    bash -c "pytest tests/fastapi/test_requests.py"
+
+    bash -c "chmod +x ./scripts/kill_process_in_port.sh && \
+    ./scripts/kill_process_in_port.sh"
+
+
