Added pytest to the tox enclave FastAPI test

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ commands =
     ./scripts/kill_process_in_port.sh"
 
     pip install -r requirements.txt
+    pip install pytest
 
     bash -c "cd ./src/ && \
     uvicorn app:app --host localhost --port 7777 --reload &"
