--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ PyYAML==6.0
 syft @ git+https://github.com/OpenMined/PySyft@oblv/0.8_refactor#egg=syft&subdirectory=packages/syft
 uvicorn>=0.15.0,<0.16.0
 validators==0.19.0
+pyoblv==0.2.0
