--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ oblv-ctl>=0.3.0
 pydantic>=1.8.0,<2.0.0
 python-multipart==0.0.5
 PyYAML==6.0
-syft @ git+https://github.com/OpenMined/PySyft@oblv/0.8_refactor#egg=syft&subdirectory=packages/syft
+syft @ git+https://github.com/OpenMined/PySyft@dev#egg=syft&subdirectory=packages/syft
 uvicorn==0.21.1
 validators==0.19.0
