--- a/.oblivious/service.yaml
+++ b/.oblivious/service.yaml
@@ -15,6 +15,19 @@ paths:
 - access: domain,user
   path: /api/v1/new/api_call
   short_description: Syft API endpoint
+- access: domain,user
+  path: /
+  short_description: HealthCheck
+- access: domain,user
+  path: /api/v1/new/metadata
+  short_description: Metadata Endpoint
+- access: domain,user
+  path: /api/v1/new/login
+  short_description: Login Endpoint
+- access: domain,user
+  path: /api/v1/new/register
+  short_description: Registration Endpoint
+
 roles:
 - role_auth: pkipsk
   role_cardinality: 3
