--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,6 +1,7 @@
-fastapi>=0.68.0,<0.69.0
+fastapi==0.95.1
+oblv-ctl==0.3.1
 pydantic>=1.8.0,<2.0.0
 python-multipart==0.0.5
 PyYAML==6.0
-uvicorn>=0.15.0,<0.16.0
+uvicorn==0.21.1
 validators==0.19.0
